bazel_dep(name = "rules_jvm_external", version = "4.3")

# Load the maven_install extension
maven_install = use_extension("@rules_jvm_external//:defs.bzl", "maven")

use_repo(maven_install, "maven")

maven_install(
    artifacts = [
        "org.springframework.boot:spring-boot-starter-data-mongodb:3.4.1",
        "org.springframework.boot:spring-boot-starter-web:3.4.1",
        "org.springframework.boot:spring-boot-starter-test:3.4.1",
        "io.temporal:temporal-sdk:1.24.1",
        "io.temporal:temporal-testing:1.24.1",
        "io.grpc:grpc-api:1.54.1",
        "io.grpc:grpc-protobuf:1.54.1",
        "io.grpc:grpc-services:1.54.1",
        "io.grpc:grpc-netty:1.54.1",
        "org.slf4j:slf4j-nop:2.0.6",
        "junit:junit:4.11",
        "org.mockito:mockito-core:5.10.0",
        "org.projectlombok:lombok:1.18.26",
        "org.powermock:powermock-api-mockito2:2.0.9",
        "org.powermock:powermock-module-junit4:2.0.9",
    ],
    repositories = [
        "https://repo.maven.apache.org/maven2",
    ],
)
